필수 라이브러리

--- a/Lab1/Lab1.1.ipynb
+++ b/Lab1/Lab1.1.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6ab865f3",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "id": "f9ff59b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 201500684 박종혁"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bcfaa03f",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "#1\n",
       "0: apple\n",
       "1: watermelon\n",
       "2: melon\n",
@@ -22,12 +31,21 @@
       "7: mango\n",
       "8: pear\n",
       "9: blueberry\n",
-      "['apple', 'watermelon', 'melon', 'house', 'banana', 'coconut', 'strawberry', 'mango', 'pear', 'blueberry', '']\n"
+      "#2\n",
+      "0: apple\n",
+      "1: watermelon\n",
+      "2: melon\n",
+      "3: house\n",
+      "4: banana\n",
+      "5: coconut\n",
+      "6: strawberry\n",
+      "7: mango\n",
+      "8: pear\n",
+      "9: blueberry\n"
      ]
     }
    ],
    "source": [
-    "# 201500684 박종혁\n",
     "import csv\n",
     "\n",
     "a = [\"apple\", \"watermelon\", \"melon\", \"house\"]\n",
@@ -36,6 +54,7 @@
     "\n",
     "myarr = a + b +c \n",
     "\n",
+    "print(\"#1\")\n",
     "for i in range(len(myarr)):\n",
     "    print(str(i)+\": \"+myarr[i])\n",
     "\n",
@@ -47,10 +66,24 @@
     "\n",
     "f2 = open(\"fruits.csv\", \"r\")\n",
     "content = csv.reader(f2)\n",
+    "\n",
+    "print(\"#2\")\n",
     "for line in content:\n",
-    "    print(line)\n",
+    "    for i in range(len(line)-1):\n",
+    "        print(str(i)+\": \"+line[i])\n",
     "    \n",
-    "f2.close()\n",
+    "f2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ab865f3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "# 201500684 박종혁"
    ]
   },
