--- a/Lab2,3,4/Pandas.ipynb
+++ b/Lab2,3,4/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9108e54b",
    "metadata": {},
    "outputs": [
@@ -12,19 +12,22 @@
        "'1.3.4'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\n",
     "import pandas\n",
     "pandas.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ee8aeb1",
    "metadata": {},
    "outputs": [],
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d2ff12cd",
    "metadata": {},
    "outputs": [
@@ -48,19 +51,65 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25, 0.5 , 0.75, 1.  ])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=4, step=1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    0.25\n",
+       "1    0.50\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pandas.Series([0.25, 0.5, 0.75, 1.0])\n",
-    "data"
+    "data\n",
+    "data.values\n",
+    "data.index\n",
+    "data[1]\n",
+    "data[0:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "87f17469",
    "metadata": {},
    "outputs": [],
@@ -70,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a207708f",
    "metadata": {},
    "outputs": [
@@ -132,7 +181,7 @@
        "공과대       8   기계공학과"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b427d5da",
    "metadata": {},
    "outputs": [
@@ -219,7 +268,7 @@
        "3  Choi  2015      9   13"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "62206d80",
    "metadata": {},
    "outputs": [],
@@ -245,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a25e9765",
    "metadata": {
     "scrolled": true
@@ -260,7 +309,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "992644d0",
    "metadata": {},
    "outputs": [
@@ -286,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "eec49dcf",
    "metadata": {},
    "outputs": [
@@ -311,7 +360,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f4c384bf",
    "metadata": {},
    "outputs": [
@@ -338,7 +387,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "244a9bbe",
    "metadata": {},
    "outputs": [
@@ -363,18 +412,298 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# NaN이 나오지 않게 하기\n",
     "C.add(D, fill_value=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "bd8f45c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col0</th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-22.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-44.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col0  col1  col2  col3\n",
+       "0  -1.0  -1.0 -11.0   NaN\n",
+       "1  -1.0  -2.0 -22.0   NaN\n",
+       "2  -1.0  -3.0 -33.0   NaN\n",
+       "3  -1.0  -4.0 -44.0   NaN\n",
+       "4   NaN   NaN   NaN   NaN"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_raw_data = {'col0': [0,1,2,3],\n",
+    "             'col1': [10, 20, 30 ,40],\n",
+    "             'col2': [100, 200, 300, 400]}\n",
+    "B_raw_data ={'col0': [1,2,3,4,5],\n",
+    "            'col1': [11, 22, 33, 44, 55],\n",
+    "            'col2': [111, 222, 333, 444, 555],\n",
+    "            'col3': [1111,2222,3333,4444,5555]}\n",
+    "\n",
+    "ADF = pandas.DataFrame(A_raw_data)\n",
+    "BDF = pandas.DataFrame(B_raw_data)\n",
+    "ADF-BDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4e400a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col0</th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>1111.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>422.0</td>\n",
+       "      <td>2222.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>633.0</td>\n",
+       "      <td>3333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>844.0</td>\n",
+       "      <td>4444.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>555.0</td>\n",
+       "      <td>5555.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col0  col1   col2    col3\n",
+       "0   1.0  21.0  211.0  1111.0\n",
+       "1   3.0  42.0  422.0  2222.0\n",
+       "2   5.0  63.0  633.0  3333.0\n",
+       "3   7.0  84.0  844.0  4444.0\n",
+       "4   5.0  55.0  555.0  5555.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ADF.add(BDF, fill_value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "59a01871",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col0</th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>110</td>\n",
+       "      <td>11100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>440</td>\n",
+       "      <td>44400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>990</td>\n",
+       "      <td>99900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1760</td>\n",
+       "      <td>177600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col0  col1    col2\n",
+       "0     1   110   11100\n",
+       "1     4   440   44400\n",
+       "2     9   990   99900\n",
+       "3    16  1760  177600"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C_raw_data = {'col0': [1,2,3,4],\n",
+    "             'col1': [10, 20, 30, 40],\n",
+    "             'col2': [100, 200, 300, 400]}\n",
+    "D_raw_data = {'col0': [1,2,3,4],\n",
+    "             'col1': [11,22,33,44],\n",
+    "             'col2': [111,222,333,444]}\n",
+    "\n",
+    "CDF = pandas.DataFrame(C_raw_data)\n",
+    "DDF = pandas.DataFrame(D_raw_data)\n",
+    "CDF*DDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "7b6a7375",
    "metadata": {},
    "outputs": [],
@@ -384,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "eda587a1",
    "metadata": {
     "scrolled": true
@@ -542,7 +871,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,17 +889,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "12285686",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x19fc5efe9a0>"
+       "<matplotlib.collections.PathCollection at 0x16e332498e0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "4b6f70aa",
    "metadata": {
     "scrolled": true
@@ -608,10 +937,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x19fc66a7c10>"
+       "<matplotlib.collections.PathCollection at 0x16e339f6790>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
