--- a/week6/NNLab1.ipynb
+++ b/week6/NNLab1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "e8940835",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "       [0.8]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -46,7 +46,7 @@
        "       [0.1, 0.5, 0.6]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -58,7 +58,7 @@
        "       [0.8, 0.1, 0.9]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "298bf34d",
    "metadata": {},
    "outputs": [
@@ -182,12 +182,25 @@
        "       [0.88]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.42],\n",
+       "       [0.88]])"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "e_output1 = 0.8\n",
     "e_output2 = 0.5\n",
     "w11 = 2.0\n",
@@ -198,6 +211,11 @@
     "# 행렬곱 사용\n",
     "error = np.array([.8, .5]).reshape(2,1)\n",
     "normalization = np.array([ w11 / (w11 + w21), w12 / (w12 + w22), w21 / (w21 + w11), w22/ (w22 + w12)]).reshape(2,2)\n",
+    "e_hidden = np.dot(normalization, error)\n",
+    "e_hidden\n",
+    "\n",
+    "w = np.array([w11, w21, w12, w22]).reshape(2,2)\n",
+    "normalization = np.array([ w11 / sum(w[0]), w12 / sum(w[1]), w21 / sum(w[0]), w22/ sum(w[1])]).reshape(2,2)\n",
     "e_hidden = np.dot(normalization, error)\n",
     "e_hidden\n",
     "\n",
