--- a/week8/NNLab2 Test.ipynb
+++ b/week8/NNLab2 Test.ipynb
@@ -3,24 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8461e32d",
+   "id": "c746bdc9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epochs 0 done\n",
-      "epochs 1 done\n",
-      "epochs 2 done\n",
-      "epochs 3 done\n",
-      "epochs 4 done\n",
-      "epochs 5 done\n",
-      "epochs 6 done\n",
-      "hidden_nodes1 = 280  hidden_nodes2 = 80  rate = 0.01  epochs = 7  performance = 0.9739\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 신경망 학습시키기\n",
     "import scipy.special\n",
@@ -109,7 +94,31 @@
     "        # 최종출력계층으로 나가는 신호를 계산\n",
     "        final_outputs = self.activation_function(final_inputs)\n",
     "        \n",
-    "        return final_outputs\n",
+    "        return final_outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8461e32d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epochs 0 done\n",
+      "epochs 1 done\n",
+      "epochs 2 done\n",
+      "epochs 3 done\n",
+      "epochs 4 done\n",
+      "epochs 5 done\n",
+      "epochs 6 done\n",
+      "hidden_nodes1 = 280  hidden_nodes2 = 80  rate = 0.01  epochs = 7  performance = 0.9739\n"
+     ]
+    }
+   ],
+   "source": [
     "    \n",
     "# 노드의 갯수\n",
     "input_nodes = 784\n",
@@ -302,8 +311,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc99a3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epochs 0 done\n",
+      "epochs 1 done\n",
+      "epochs 2 done\n",
+      "epochs 3 done\n",
+      "epochs 4 done\n",
+      "epochs 5 done\n",
+      "epochs 6 done\n",
+      "epochs 7 done\n",
+      "epochs 8 done\n",
+      "epochs 9 done\n",
+      "hidden_nodes1 = 280  hidden_nodes2 = 80  rate = 0.01  epochs = 10  performance = 0.9763\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 노드의 갯수\n",
+    "input_nodes = 784\n",
+    "hidden_nodes1 = 280\n",
+    "hidden_nodes2 = 80\n",
+    "output_nodes = 10\n",
+    "# 학습률\n",
+    "learning_rate = 0.01\n",
+    "# 반복회수\n",
+    "epochs = 10\n",
+    "\n",
+    "n = NeuralNetwork(input_nodes, hidden_nodes1, hidden_nodes2, output_nodes, learning_rate)\n",
+    "\n",
+    "# 60,000개의 레코드 학습데이터 모음\n",
+    "# 10,000개의 레코드를 가지는 전체 테스트 데이터 모음\n",
+    "training_data_file = open(\"mnist_dataset/mnist_train.csv\", \"r\")\n",
+    "training_data_list = training_data_file.readlines()\n",
+    "training_data_file.close()\n",
+    "\n",
+    "# 주기를 통해 신경망 학습\n",
+    "# 신경망 학습시키기\n",
+    "for e in range(epochs):\n",
+    "    print(f\"epochs {e} done\")\n",
+    "    for record in training_data_list:\n",
+    "        # 레코드를 쉼표에 의해 분리\n",
+    "        all_values = record.split(\",\")\n",
+    "        # 입력 값의 범위와 값 조정\n",
+    "        inputs = (np.asfarray(all_values[1:]) / 255.0 * 0.99) + 0.01\n",
+    "        # 결과 값 생성(실제 값인 0.99 외에는 모두 0.01)\n",
+    "        targets = np.zeros(output_nodes) + 0.01\n",
+    "        # all_values[0]은 이 레코드에 대한 결과값\n",
+    "        targets[int(all_values[0])] = 0.99\n",
+    "        n.train(inputs, targets)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# 신경망의 성능 지표가 되는 성적표를 초기화함\n",
+    "scorecard = []\n",
+    "\n",
+    "test_data_file = open(\"mnist_dataset/mnist_test.csv\", \"r\")\n",
+    "test_data_list = test_data_file.readlines()\n",
+    "test_data_file.close()\n",
+    "\n",
+    "for record in test_data_list:\n",
+    "    # 레코드를 쉼표에 의해 분리\n",
+    "    all_values = record.split(\",\")\n",
+    "    # 정답은 첫번째 값\n",
+    "    correct_label = int(all_values[0])\n",
+    "    #print(correct_label, \"correct label\")\n",
+    "    # 입력 값의 범위와 값 조정\n",
+    "    inputs = (np.asfarray(all_values[1:]) / 255.0 * 0.99) + 0.01\n",
+    "    # 신경망에 질의\n",
+    "    outputs = n.query(inputs)\n",
+    "    # 가장 높은 값의 인덱스는 레이블의 인덱스와 일치\n",
+    "    label = np.argmax(outputs)\n",
+    "    #print(label, \"network's answer\")\n",
+    "    # 정답 또는 오답을 리스트에 추가\n",
+    "    if (label == correct_label):\n",
+    "        scorecard.append(1)\n",
+    "    else:\n",
+    "        scorecard.append(0)\n",
+    "\n",
+    "# 정답\n",
+    "scorecard_array = np.asarray(scorecard)\n",
+    "# print(\"performance =\", scorecard_array.sum() / scorecard_array.size)\n",
+    "print(\"hidden_nodes1 =\", hidden_nodes1, end=\"  \")\n",
+    "print(\"hidden_nodes2 =\", hidden_nodes2, end=\"  \")\n",
+    "print(\"rate =\", learning_rate, end=\"  \")\n",
+    "print(\"epochs =\", epochs, end=\"  \")\n",
+    "print(\"performance =\", scorecard_array.sum() / scorecard_array.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ab4907e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -325,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
