csv 파일 선형회귀 분석

--- a/week11/TorchLab5.ipynb
+++ b/week11/TorchLab5.ipynb
@@ -672,9 +672,9 @@
     "f_mnist_test = dset.FashionMNIST(\"./\", train=False, transform=transforms.ToTensor(),\n",
     "                        target_transform=None, download=True)\n",
     "\n",
-    "f_train_loader = torch.utils.data.DataLoader(mnist_train, batch_size=batch_size,\n",
+    "f_train_loader = torch.utils.data.DataLoader(f_mnist_train, batch_size=batch_size,\n",
     "                                           shuffle=True, num_workers=2, drop_last=True)\n",
-    "f_test_loader = torch.utils.data.DataLoader(mnist_test, batch_size=batch_size,\n",
+    "f_test_loader = torch.utils.data.DataLoader(f_mnist_test, batch_size=batch_size,\n",
     "                                          shuffle=True, num_workers=2, drop_last=True)"
    ]
   },
